--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,5 +1,3 @@
-- Add INI setting to add extra extensions to be threated as JSON (Oddbrother).
-
 - Replace OptiPNG with oxipng. Will it work with APNG like OptiPNG?: https://github.com/shssoichiro/oxipng (TPS).
 
 - Rename Enable tidy to Enable HTML/SVG optimization (TPS).
@@ -171,6 +169,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Added INI setting to add extra extensions to be threated as JSON (Oddbrother).
 
 
 
