--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -139,7 +139,7 @@ ndo
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.19 - http://www.ghostscript.com
 - GNU Strip 2.26 - http://www.gnu.org/software/binutils/
-- ImageMagick 7.0.3.0 - http://www.imagemagick.org
+- ImageMagick 7.0.3.1 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -172,6 +172,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Added INI setting to add extra extensions to be threated as JSON (Oddbrother).
+- Updated ImageMagick 7.0.3.1 with HDRI support.
 - Some minor optimizations and code cleanup.
 
 
