--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -170,6 +170,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Added INI setting to add extra extensions to be threated as JSON (Oddbrother).
+- Implemented several UPX compression profiles depending on optimization level (User Hunter).
 - Updated ImageMagick 7.0.3.1 with HDRI support.
 - Updated Leanify to 0.4.3.152 daily binaries.
 - Some minor optimizations and code cleanup.
