Fixed remove selected files (Shift-Del) always enabled since 9.00 when unified ribbon and regular UI (TPS)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@589 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -169,6 +169,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Fixed remove selected files (Shift-Del) always enabled since 9.00 when unified ribbon and regular UI (TPS).
 
 
 9.20 - 2016/10/01
