--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -137,7 +137,7 @@ ndo
 - Flasm 1.62 - http://flasm.sourceforge.net
 - Gifsicle 1.88 - http://www.lcdf.org/gifsicle/
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
-- Ghostscript 9.19 - http://www.ghostscript.com
+- Ghostscript 9.20 - http://www.ghostscript.com
 - GNU Strip 2.26 - http://www.gnu.org/software/binutils/
 - ImageMagick 7.0.3.3 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
@@ -175,6 +175,7 @@ X.XX - YYYY/MM/DD
 - Add original and optimized sizes in log file (JoeW).
 - Updated Leanify to 0.4.3.159 daily binaries.
 - Updated ImageMagick 7.0.3.3 with HDRI support.
+- Updated to Ghostscript 9.20.
 - Updated to cppcheck 1.76.
 - Upgraded distributions to 7-Zip 16.04.
 - Some minor optimizations and code cleanup.
