--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -171,6 +171,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Installer now supports the /AllUsers argument to install for all users instead of current user (Grahame Bevan).
 - Fixed remove selected files (Shift-Del) always enabled since 9.00 when unified ribbon and regular UI (TPS).
 - Add original and optimized sizes in log file (JoeW).
 - Updated jsmin custom build with Visual C++ 2015.
