--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -152,7 +152,7 @@ ndo
 - mozjpeg 3.10 - https://github.com/mozilla/mozjpeg
 - MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
 - mp4v2 2.0.0 r504 - https://code.google.com/p/mp4v2/
-- mutools 1.9a - http://mupdf.com/downloads/
+- mutool 1.9a - http://mupdf.com/downloads/
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
@@ -174,6 +174,7 @@ X.XX - YYYY/MM/DD
 - Installer now supports the /AllUsers argument to install for all users instead of current user (Grahame Bevan).
 - Fixed remove selected files (Shift-Del) always enabled since 9.00 when unified ribbon and regular UI (TPS).
 - Add original and optimized sizes in log file (JoeW).
+- Fixed a bug in mutool that prevented execution on PDF (LeTiger).
 - Updated jsmin custom build with Visual C++ 2015.
 - Updated Leanify to 0.4.3.159 daily binaries.
 - Updated ImageMagick 7.0.3.4 with HDRI support.
