--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -177,9 +177,9 @@ ndo
 X.XX - YYYY/MM/DD
 - Installer now supports the /AllUsers argument to install for all users instead of current user (Grahame Bevan).
 - Fixed remove selected files (Shift-Del) always enabled since 9.00 when unified ribbon and regular UI (TPS).
-- Add original and optimized sizes in log file (JoeW).
+- Added original and optimized sizes in log file (JoeW).
 - Fixed a bug in mutool that prevented execution on PDF (LeTiger).
-- Disabled Leanify from the JPEG toolchain when copy metadata is enabled, because it removed IPTC information (ZonaCasio).
+- Disabled Leanify from the JPEG, PNG and ICO toolchains when copy metadata is enabled, because it removed IPTC information (ZonaCasio).
 - Updated to ECT 0.6.2.0 -511fa96- x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated jsmin custom build with Visual C++ 2015.
 - Updated Leanify to 0.4.3.159 daily binaries.
