--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -156,7 +156,7 @@ ndo
 - mozjpeg 3.10 - https://github.com/mozilla/mozjpeg
 - MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
 - mp4v2 2.0.0 r504 - https://code.google.com/p/mp4v2/
-- mutool 1.10RC2 - http://mupdf.com/downloads/
+- mutool 1.10a - http://mupdf.com/downloads/
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
@@ -175,6 +175,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Updated to mutool 1.10a.
 - Better performance updating to ASMLib 2.51 with AVX512 support.
 
 
