--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -143,7 +143,7 @@ ndo
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.20 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
-- ImageMagick 7.0.3.7 - http://www.imagemagick.org
+- ImageMagick 7.0.3.8 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -176,6 +176,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Updated to mutool 1.10a.
+- Updated ImageMagick 7.0.3.8 with HDRI support.
 - Better performance updating to ASMLib 2.51 with AVX512 support.
 
 
