Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@624 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -175,7 +175,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
-- Updated to mutool 1.10a.
+- Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
 - Updated ImageMagick 7.0.3.8 with HDRI support.
 - Better performance updating to ASMLib 2.51 with AVX512 support.
 
