--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -162,7 +162,7 @@ ndo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
-- pngquant 2.7.0a - http://www.pngquant.org
+- pngquant 2.8.0 - http://www.pngquant.org
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.1 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
@@ -176,6 +176,8 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Added INI setting PDFSkipLayered=false to skip processing of PDF containing layers Optional Content Groups -OCG- (Grahame Bevan).
+- Added removing metadata in pngquant if PNGCopyMetadata is disabled.
+- Updated pngquant to 2.8.0.
 - Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
 - Updated ImageMagick 7.0.3.8 with HDRI support.
 - Better performance updating to ASMLib 2.51 with AVX512 support.
