--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -179,7 +179,7 @@ X.XX - YYYY/MM/DD
 - Implemented using Win64 plugins in all Win64 system, even if you run Win32 version of FileOptimizer.
 - Added removing metadata in pngquant if PNGCopyMetadata is disabled.
 - Reenabled Leanify in JPEG processing when Copy Metadata is enabled, because now we can use --jpeg-keep-all-metadata.
-- Updated strip to 3.92.
+- Updated UPX to 3.92.
 - Updated Leanify to 0.4.3.173 daily binaries.
 - Updated pngquant to 2.8.0.
 - Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
