--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,4 +1,9 @@
+- Autoupdate plugins (olavrb)
+
+- Add Guetzli: http://encode.ru/threads/2628-Guetzli-a-new-more-psychovisual-JPEG-encoder?p=50677 (Jyrki Alakuijala)
+
 - Recompress ZIP and RAR: http://aarmstrong.org/tutorials/mass-zip-rar-to-7zip-recompression-batch-file (Henry).
+
 - Revisar metadatas con Leanify (ZonaCasio).
 
 - Guetzli? http://encode.ru/threads/2628-Guetzli-a-new-more-psychovisual-JPEG-encoder
