Updated to NSIS 3.01
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@640 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -192,6 +192,7 @@ X.XX - YYYY/MM/DD
 - Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
 - Updated ImageMagick 7.0.4.0 with HDRI support.
 - Better performance updating to ASMLib 2.51 with AVX512 support.
+- Updated to NSIS 3.01.
 
 
 
