--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -149,7 +149,7 @@ ndo
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.20 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
-- ImageMagick 7.0.4.1 - http://www.imagemagick.org
+- ImageMagick 7.0.4.2 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -166,7 +166,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.51 - http://css-ig.net/pingo
+- pingo 0.49e - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.0 - http://www.pngquant.org
@@ -188,13 +188,13 @@ X.XX - YYYY/MM/DD
 - Added pingo to the JPEG and PNG toolchains when copy metadata is disabled.
 - Reenabled Leanify in JPEG processing when Copy Metadata is enabled, because now we can use --jpeg-keep-all-metadata.
 - Fixed crashing with temporary paths longer than 260 characters (Roman Luks).
-- Updated pingo to 0.51.
+- Updated pingo to 0.49e.
 - Updated libwebp to 0.5.2.
 - Updated UPX to 3.92.
 - Updated Leanify to 0.4.3.173 daily binaries.
 - Updated pngquant to 2.8.0.
 - Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
-- Updated ImageMagick 7.0.4.1 with HDRI support.
+- Updated ImageMagick 7.0.4.2 with HDRI support.
 - Better performance updating to ASMLib 2.51 with AVX512 support.
 - Updated to cppcheck 1.77.
 - Updated to NSIS 3.01.
