--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -146,7 +146,7 @@ ndo
 - Ghostscript 9.20 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.4.2 - http://www.imagemagick.org
+- ImageMagick 7.0.4.3 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -179,7 +179,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Updated pingo to 0.52c.
-
+- Updated ImageMagick 7.0.4.3 with HDRI support.
 
 9.40 - 2017/01/06
 - Added INI setting PDFSkipLayered=false to skip processing of PDF containing layers Optional Content Groups -OCG- (Grahame Bevan).
