- Updated pngquant to 2.8.1
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@668 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -166,7 +166,7 @@ ndo
 - pingo 0.53 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
-- pngquant 2.8.0 - http://www.pngquant.org
+- pngquant 2.8.1 - http://www.pngquant.org
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.1 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
@@ -179,6 +179,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Updated pingo to 0.53.
+- Updated pngquant to 2.8.1.
 
 
 9.50 - 2017/01/10
