Added descriptions in INI file to make it easier and safer to be modified
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@670 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -178,6 +178,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Added descriptions in INI file to make it easier and safer to be modified.
 - Updated pingo to 0.53.
 - Updated pngquant to 2.8.1.
 
