Avoid buffer overlapping _stprintf in INI comments and improve performance using _tcscpy and _tcscat
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@673 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -182,6 +182,7 @@ X.XX - YYYY/MM/DD
 - Migrated from smpdf to cpdf (maadjordan).
 - Updated pingo to 0.53.
 - Updated pngquant to 2.8.1 (dado023).
+- Some minor optimizations and code cleanup.
 
 
 9.50 - 2017/01/10
