--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -146,7 +146,7 @@ ndo
 - Ghostscript 9.20 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.4.3 - http://www.imagemagick.org
+- ImageMagick 7.0.4.4 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -180,6 +180,7 @@ ndo
 X.XX - YYYY/MM/DD
 - Added descriptions in INI file to make it easier and safer to be modified.
 - Migrated from smpdf to cpdf (maadjordan).
+- Updated ImageMagick 7.0.4.4 with HDRI support.
 - Updated pingo to 0.54.
 - Updated pngquant to 2.8.1 (dado023).
 - Some minor optimizations and code cleanup.
