--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -145,7 +145,7 @@ ndo
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.20 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
-- Guetzli 0.1 - https://github.com/google/guetzli
+- Guetzli 0.2 - https://github.com/google/guetzli
 - ImageMagick 7.0.4.4 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
@@ -189,6 +189,7 @@ X.XX - YYYY/MM/DD
 9.50 - 2017/01/10
 - Fixed a regression since FileOptimizer 9.30, that could avoid some plugin optimizations to not being applied (Armin Mueller, signalman).
 - Fixed a bug when LogLevel was 4, when Optimized Size could be reported as 0 bytes in some situations.
+- Updated Guetzli to 0.2, now with x64 native binary.
 - Updated pingo to 0.52c.
 - Updated ImageMagick 7.0.4.3 with HDRI support.
 - Some minor optimizations and code cleanup.
