--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -153,7 +153,7 @@ ndo
 - jpegoptim 1.4.4 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
-- Leanify 0.4.3.173 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
+- Leanify 0.4.3.176 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
 - libwebp 0.5.2 - http://www.webmproject.org
 - mkclean 0.8.7 - http://www.matroska.org/downloads/mkclean.html
 - mozjpeg 3.10 - https://github.com/mozilla/mozjpeg
@@ -180,6 +180,7 @@ ndo
 X.XX - YYYY/MM/DD
 - Added descriptions in INI file to make it easier and safer to be modified.
 - Migrated from smpdf to cpdf (maadjordan).
+- Updated Leanify to 0.4.3.176 daily binaries.
 - Updated ImageMagick 7.0.4.4 with HDRI support.
 - Updated pingo to 0.54.
 - Updated pngquant to 2.8.1 (dado023).
