--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -172,7 +172,7 @@ ndo
 - rehuff - http://wiki.xiph.org/Rehuff
 - Tidy 5.2.0 - http://tidy.sourceforge.net
 - TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
-- UPX 3.92 - http://upx.sourceforge.net
+- UPX 3.93 - https://upx.github.io
 - ZLib 1.2.8 - http://www.zlib.net
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
@@ -182,6 +182,7 @@ X.XX - YYYY/MM/DD
 - Migrated from smpdf to cpdf (maadjordan).
 - Fixed a bug that could show optimized sizes larger than original, when the plugin execution increased it. It was only cosmetic, and optimized size, never was larger (Pepper Andrino).
 - Ghostrcript is automatically disabled when no downsampling is selected, because it is always downsampling images even if -dDownsampleColorImages=false -dDownsampleGrayImages=false -dDownsampleMonoImages=false are specified (olavrb).
+- Updated UPX to 3.93.
 - Updated libwebp to 0.6.0 RC2.
 - Updated Leanify to 0.4.3.176 daily binaries.
 - Updated ImageMagick 7.0.4.6 with HDRI support.
