--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -185,6 +185,7 @@ X.XX - YYYY/MM/DD
 - Make sure TempDirectory is created to avoid certain plugins crash (Newtomic).
 - Patched Guetzli and Mutool plugins to be compatible with Windows XP (thanks Jaff for the patch).
 - Switched to libwebp without WIC codes to keep Windows XP compatibility (Jaff).
+- Fixed not properly passing PDF profile to Ghostcript (#9 Runer112).
 - Updated UPX to 3.93.
 - Updated libwebp to 0.6.0 RC3.
 - Updated Leanify to 0.4.3.176 daily binaries.
