Updated Leanify to 0.4.3.182 daily binaries
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@712 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -153,7 +153,7 @@ ndo
 - jpegoptim 1.4.4 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
-- Leanify 0.4.3.180 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
+- Leanify 0.4.3.182 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
 - libwebp 0.6.0 RC3 - http://www.webmproject.org
 - mkclean 0.8.7 - http://www.matroska.org/downloads/mkclean.html
 - mozjpeg 3.2 - https://github.com/mozilla/mozjpeg
@@ -179,6 +179,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Updated pingo to 0.63.
+- Updated Leanify to 0.4.3.182 daily binaries.
 
 
 9.60 - 2017/02/18
