--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -146,7 +146,7 @@ ndo
 - Ghostscript 9.20 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 0.2 - https://github.com/google/guetzli
-- ImageMagick 7.0.4.7 - http://www.imagemagick.org
+- ImageMagick 7.0.5.0 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -180,6 +180,7 @@ ndo
 X.XX - YYYY/MM/DD
 - Updated pingo to 0.63.
 - Updated Leanify to 0.4.3.182 daily binaries.
+- Updated ImageMagick 7.0.5.0 with HDRI support.
 
 
 9.60 - 2017/02/18
