--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,7 +163,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.66 - http://css-ig.net/pingo
+- pingo 0.66b - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.1 - http://www.pngquant.org
@@ -178,7 +178,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
-- Updated pingo to 0.66.
+- Updated pingo to 0.66b.
 - Updated Leanify to 0.4.3.182 daily binaries.
 - Updated ImageMagick 7.0.5.0 with HDRI support.
 
