Make it cleaner
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@740 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -187,6 +187,7 @@ X.XX - YYYY/MM/DD
 - Updated pingo to 0.74.
 - Updated Leanify to 0.4.3.188 daily binaries.
 - Updated ImageMagick 7.0.5.2 with HDRI support.
+- Some minor optimizations and code cleanup.
 
 
 9.60 - 2017/02/18
