--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -146,7 +146,7 @@ ndo
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0 - https://github.com/google/guetzli
-- ImageMagick 7.0.5.3 - http://www.imagemagick.org
+- ImageMagick 7.0.5.4 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -179,7 +179,7 @@ ndo
 
 X.XX - YYYY
 - Updated pingo to 0.78.
-
+- Updated ImageMagick 7.0.5.4 with HDRI support.
 
 9.70 - 2017/03/25
 - Added INI setting IncludeMask=. If not empty, only files containing this mask (substring) on name or path will be included from optimization (user202jkl).
