--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -145,7 +145,7 @@ ndo
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
-- Guetzli 1.0 - https://github.com/google/guetzli
+- Guetzli 1.0.1 - https://github.com/google/guetzli
 - ImageMagick 7.0.5.4 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
@@ -178,6 +178,7 @@ ndo
 
 
 X.XX - YYYY
+- Updated Guetzli to 1.0.1 (olavrb).
 - Updated pingo to 0.78.
 - Updated ImageMagick 7.0.5.4 with HDRI support.
 
