--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,7 +163,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.78 - http://css-ig.net/pingo
+- pingo 0.79b - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.1 - http://www.pngquant.org
@@ -180,7 +180,7 @@ ndo
 X.XX - YYYY
 - Updated to ECT 0.7.0 x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated Guetzli to 1.0.1 (olavrb).
-- Updated pingo to 0.78.
+- Updated pingo to 0.79n.
 - Updated ImageMagick 7.0.5.4 with HDRI support.
 
 9.70 - 2017/03/25
