--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -165,7 +165,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.79g - http://css-ig.net/pingo
+- pingo 0.79i - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.1 - http://www.pngquant.org
@@ -190,7 +190,7 @@ X.XX - YYYY
 - Updated to mutool 1.11.
 - Updated to ECT 0.7.0 (9090e23) x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated Guetzli to 1.0.1 (olavrb).
-- Updated pingo to 0.79g.
+- Updated pingo to 0.79i.
 - Updated ImageMagick 7.0.5.4 with HDRI support.
 - Updated to cppcheck 1.78.
 - Some minor optimizations and code cleanup.
