Try to figure out why x64 release version shows strange characters in TMenuItem.ShortCut.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@771 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,5 @@
+- Figure out why x64 release version shows strange characters in TMenuItem.ShortCut.
+
 - Detect plugin crash after a timeout (FatBit)
 
 - Autoupdate plugins: http://nsis.sourceforge.net/Check_online_for_Updates (olavrb)
