Finally figured the issue, and have been able to reproduce it on an empty project. Embarcadero C++ Builder 10.2 Tokyo, has a bug in the Win64 version when "Link with runtime packages" is set to false, then the shortcuts show like chinesse characters.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@774 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,5 @@
+- Embarcadero C++ Builder 10.2 Tokyo, has a bug in the Win64 version when "Link with runtime packages" is set to false.
+
 - Figure out why x64 release version shows strange characters in TMenuItem.ShortCut.
 
 - Detect plugin crash after a timeout (FatBit)
